ipc/ipdl/test/ipdl/ok/Pjetpack.ipdl
[ChildProc=any]
sync protocol Pjetpack {
child:
    async __delete__();

};
