ipc/ipdl/test/ipdl/error/extra/PManagerManualDeallocTop.ipdl
include protocol PManagerManualDealloc;

[ChildProc=any]
async protocol PManagerManualDeallocTop {
    manager PManagerManualDealloc;

child:
    async __delete__();
};
